--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,18 @@ language: php
 php:
   - 5.5
   - 5.6
+  - 7.0
   - hhvm
 
 matrix:
   fast_finish: true
   allow_failures:
+    - php: 7.0
     - php: hhvm
+
+cache:
+  directories:
+    - $HOME/.composer/cache
 
 install:
   - composer self-update
