--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,30 +1,28 @@
-imports:
-  - php
+filter:
+  paths: [src/*]
 
-before_commands:
-  - "composer install --prefer-source"
+checks:
+  php:
+    remove_extra_empty_lines: true
+    remove_php_closing_tag: true
+    remove_trailing_whitespace: true
+    fix_use_statements:
+      remove_unused: true
+      preserve_multiple: false
+      preserve_blanklines: true
+      order_alphabetically: true
+    fix_php_opening_tag: true
+    fix_linefeed: true
+    fix_line_ending: true
+    fix_identation_4spaces: true
+    fix_doc_comments: true
 
 tools:
-  php_mess_detector: ~
-  php_cs_fixer:
-    config:
-      level: all
-  php_analyzer:
-    config:
-      suspicious_code: { enabled: true, overriding_parameter: true }
-      verify_php_doc_comments: { enabled: true }
-      loops_must_use_braces: { enabled: true }
-      simplify_boolean_return: { enabled: true }
-      phpunit_checks: { enabled: true }
-      reflection_fixes: { enabled: true }
-      use_statement_fixes: { enabled: true, order_alphabetically: true }
-  php_code_sniffer:
-    config:
-      standard: PSR2
-  php_loc: true
+  php_cs_fixer: ~
   php_pdepend: true
   php_sim: true
   php_changetracking: true
   sensiolabs_security_checker: true
   external_code_coverage:
-    timeout: 1200
+    timeout: 600
+    runs: 2
