--- a/composer.json
+++ b/composer.json
@@ -13,17 +13,28 @@
   "require": {
     "php":                      ">=5.5",
     "ext-mbstring":             "*",
+    "ext-intl":                 "*",
+    "psr/http-message":         "~1.0",
     "symfony/event-dispatcher": "~2.6",
     "symfony/http-foundation":  "~2.6",
     "symfony/serializer":       "~2.6",
     "guzzlehttp/guzzle":        "~6.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.4"
+    "phpunit/phpunit": "~4.5",
+    "scrutinizer/ocular": "~1.1"
   },
   "autoload": {
     "psr-4": {
       "TreeHouse\\Feeder\\": "src/TreeHouse/Feeder/"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "TreeHouse\\Feeder\\Tests\\": "tests/TreeHouse/Feeder/Tests/"
+    }
+  },
+  "scripts": {
+    "test": "phpunit"
   }
 }
